# Utah_Housing_Project

./: .gitignore  Documentation.qmd  README.md  TechnicalReport.qmd  Tutorial.qmd  _quarto.yml  app.py  data_acquisition.ipynb  getting_started.ipynb  index.qmd  pyproject.toml  requirements.txt
data/: utah_housing.csv
docs/: Documentation.html  TechnicalReport.html  Tutorial.html  data_acquisition.html  getting_started.html  index.html  search.json  styles.css
