[project]
name = "utah-housing-project"
version = "0.1.0"
description = "Utah Housing Affordability Analysis — ACS 5-year estimates for Utah census tracts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.10.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "plotly>=6.0.0",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.0",
    "statsmodels>=0.14.0",
    "streamlit>=1.35.0",
    "utah-housing>=0.1.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "quarto>=0.1.0",
]

[tool.uv]
package = false
